[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
ethers = { version = "2.0.14", features = ["rustls", "ws", "abigen"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
hex = "0.4"
zip = "0.6.6" # for extracting IPFS zips in memory
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
mime_guess = "2.0.5"
eth-keystore = "0.5.0"
libp2p = { version = "0.53", features = ["macros", "tokio", "kad", "tcp", "noise", "yamux", "gossipsub", "identify", "mdns", "request-response", "cbor", "quic", "dns"] }
reed-solomon-erasure = "6.0"
sha2 = "0.10"
futures = "0.3.32"
sled = "0.34"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
